Add order attribute to station
